--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -5,10 +5,10 @@
 .user-info__container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   width: 300px;
-  height: max-content;
-  padding: 2rem;
+  height: 500px;
+  padding: 20px;
   background-color: var(--body-background);
   box-shadow: var(--shadow) 0px 2px 8px 0px;
   border-radius: 24px;
@@ -19,23 +19,25 @@
   height: 90px;
   border-radius: 50%;
   object-fit: cover;
-  margin-bottom: 2rem;
+  margin: 2rem 1.5rem;
 }
 
 .user-info__details {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   margin-bottom: 3rem;
 
   h1 {
     padding-bottom: 1rem;
+    text-align: center;
   }
 
   .user-info__location {
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
+    text-align: center;
     color: var(--text-light);
   }
 }
@@ -43,7 +45,7 @@
 .user-info__profile-stats {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   width: 100%;
 
@@ -78,7 +80,7 @@
   
 
   p {
-    padding-left: 3rem;
+    padding-left: 4rem;
     color: var(--text-light);
   }
 }
