--- a/frontend/src/styles/ViewToggle.scss
+++ b/frontend/src/styles/ViewToggle.scss
@@ -2,44 +2,212 @@
 @import 'index.scss';
 
 .view-toggle {
+  display: inline-block;
+  vertical-align: middle;
+  width: 250px;
+  height: 36px;
+  border-radius: 24px;
+  background-color: var(--button-color);
   position: absolute;
   top: 2rem;
   right: 1.5rem;
-  height: 36px;
-  background-color: var(--button-color);
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  border-radius: 24px;
-  padding: 0.5rem 0;
 
-  .view-toggle__option {
-    text-align: center;
-    color: var(--text-grey);
-    transition: color 0.2s ease-in 0s;
-    padding: 0 1rem;
-
-    &:hover{
-      color: var(--text-light);
-      cursor: pointer;
-    }
+  h4 {
+    margin: 0;
+    font-weight: 400;
   }
 
-  .view-toggle__option--selected {
-    background-color: var(--button-highlight-color);
-    color: #fff;
-    border-radius: 24px;
-    overflow: visible;
-    height: 40px;
-    box-shadow: $shadow-grey 0px 2px 8px 0px;
+  label {
+    color: var(--text-light);
+    z-index: 10;
+    cursor: pointer;
+  }
 
-    //center overflow + recenter text
-    margin: -10px 0;
-    padding: 0.5rem 1rem;
-    line-height: 22px;
+  input[type="radio"] {
+    display: none;
+  }
+}
 
-    &:hover {
-      cursor:default;
-      color: #fff;
-    }
+.switch {
+  height: 40px;
+  width: 85px;
+  background-color: var(--button-highlight-color);
+  color: #fff;
+  position: absolute;
+  left: -20px;
+  top: -2px;
+  transition: ease-in;
+  border-radius: 24px;
+  overflow: visible;
+  box-shadow: $shadow-grey 0px 2px 8px 0px;
+}
+
+/*---------------- MAP ------------------- */
+.switch.map-to-saved {
+  animation-name: mapToSaved;
+  animation-duration: 0.5s;
+}
+
+.switch.map-to-visits {
+  animation-name: mapToVisits;
+  animation-duration: 0.5s;
+}
+
+.switch.map-position {
+  left: -3px;
+}
+
+.map-label {
+  position: absolute;
+}
+
+#map + label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  width: 80px;
+  border-radius: 24px;
+}
+
+#map:checked + label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  width: 80px;
+  border-radius: 100px;
+  color: #fff;
+}
+
+@keyframes mapToSaved {
+  from {
+    left: 3px;
+  }
+  to {
+    left: 85px;
+  }
+}
+
+@keyframes mapToVisits {
+  from {
+    left: 3px;
+  }
+  to {
+    left: 167px;
+  }
+}
+
+/* -------------------- SAVED ------------------ */
+.switch.saved-to-map {
+  animation-name: savedToMap;
+  animation-duration: 0.5s;
+}
+
+.switch.saved-to-visits {
+  animation-name: savedToVisits;
+  animation-duration: 0.5s;
+}
+
+.switch.saved-position {
+  left: 82px;
+}
+
+.saved-label {
+  position: absolute;
+  left: 85px;
+}
+
+#saved + label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  width: 80px;
+  border-radius: 100px;
+}
+
+#saved:checked + label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  width: 80px;
+  border-radius: 100px;
+  color: #fff;
+}
+
+@keyframes savedToMap {
+  from {
+    left: 85px;
+  }
+  to {
+    left: 3px;
+  }
+}
+
+@keyframes savedToVisits {
+  from {
+    left: 85px;
+  }
+  to {
+    right: 1px;
+  }
+}
+
+/* ------------------- VISITS ------------------- */
+.switch.visits-to-map {
+  animation-name: visitsToMap;
+  animation-duration: 0.5s;
+}
+
+.switch.visits-to-saved {
+  animation-name: visitsToSaved;
+  animation-duration: 0.5s;
+}
+
+.switch.visits-position {
+  left: 165px;
+}
+
+.visits-label {
+  position: absolute;
+  right: 2px;
+}
+
+#visits + label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  width: 80px;
+  border-radius: 100px;
+}
+
+#visits:checked + label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  width: 80px;
+  border-radius: 100px;
+  color: #fff;
+}
+
+@keyframes visitsToMap {
+  from {
+    left: 167px;
+  }
+  to {
+    left: 3px;
+  }
+}
+
+@keyframes visitsToSaved {
+  from {
+    left: 167px;
+  }
+  to {
+    right: 85px;
   }
 }
