feat: add homepage ui adjustments

--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -38,6 +38,7 @@
   margin-bottom: 24px;
   box-shadow: 0 4px 8px -2px var(--shadow);
   background-color: var(--page-background);
+  color: var(--text-color);
 }
 
 #password {
