--- a/frontend/src/styles/DarkModeToggle.scss
+++ b/frontend/src/styles/DarkModeToggle.scss
@@ -21,11 +21,10 @@
     width: 25px;
     height: 25px;
     position: absolute;
-    top: 3px;
-    left: 3px;
-    background: linear-gradient(180deg, #ffcc89, #d8860b);
+    top: 2.5px;
+    left: 4px;
+    background-color: var(--sunny);
     border-radius: 180px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 }
 .dark_mode_input {
@@ -39,7 +38,7 @@
 .dark_mode_input:checked + .dark_mode_label:after {
     left: 62px;
     transform: translateX(-100%);
-    background: linear-gradient(180deg, #777, #3a3a3a);
+    background-color: #636363;
 }
 .dark_mode_label:active:after {
     width: 30px;
@@ -48,11 +47,11 @@
 .dark_mode_label svg {
     position: absolute;
     width: 20px;
-    top: 5px;
+    top: 4.75px;
     z-index: 100;
 }
 .dark_mode_label svg.sun {
-    left: 5.5px;
+    left: 6.6px;
     fill: #fff;
     transition: 0.3s;
 }
