--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -56,7 +56,7 @@
 .list__spots{
   display: flex;
   flex-direction: column;
-  margin: 1.5rem auto;
+  padding: 1.5rem 0;
   justify-content: center;
   background-color: var(--body-background);
 }
@@ -123,4 +123,29 @@
 
 .slide-down-paragraph {
   animation: slide-down 0.8s;
+}
+
+footer {
+  background-color: var(--footer);
+  width: 100%;
+  height: 225px;
+}
+
+.footer__container {
+  height: 100%;
+  margin: auto auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+  color: #f5f5f5;
+
+  .footer__at {
+    color: var(--text-light);
+  }
+}
+
+.footer__logo {
+  width: 200px;
 }
