--- a/frontend/src/styles/FilterOptionsCard.scss
+++ b/frontend/src/styles/FilterOptionsCard.scss
@@ -25,8 +25,8 @@
       bottom: 0;
       height: 2rem;
       padding: 0 1rem;
-      background-color: var(--button-highlight-color);
-      color: #FFFFFF;
+      background-color: var(--button-color);
+      color: var(--text-color);
       border-radius: 24px;
       display: flex;
       align-items: center;
@@ -35,7 +35,7 @@
       transition: $transition-3;
 
       &:hover {
-        background-color: var(--button-highlight-hover);
+        background-color: var(--button-color-hover);
         cursor: pointer;
       }
     }
