feat: adjust filter and sort containers

--- a/frontend/src/styles/FilterOptionsCard.scss
+++ b/frontend/src/styles/FilterOptionsCard.scss
@@ -2,9 +2,9 @@
 
 .filterOptions{
   z-index: 9999;
-  height: 300px;
+  height: 320px;
   width:300px;
-  padding: 1rem 1.5rem;
+  padding: 1.5rem;
   background-color: var(--page-background);
   color: var(--text-color);
   box-shadow: var(--shadow) 0px 2px 4px 0px;
@@ -25,7 +25,7 @@
       bottom: 0;
       height: 2rem;
       padding: 0 1rem;
-      background-color: var(--button-color);
+      background-color: inherit;
       color: var(--text-color);
       border-radius: 24px;
       display: flex;
@@ -46,14 +46,12 @@
   flex: 5;
   height: 220px;
   overflow: scroll;
-
   position: relative;
   display: flex;
   gap: 0.5rem;
   flex-direction: column;
   list-style-type: none;
-
-
+  margin-bottom: 0.5rem;
   
   li {
     position:relative;
