--- a/frontend/src/styles/SortOptionsCard.scss
+++ b/frontend/src/styles/SortOptionsCard.scss
@@ -4,7 +4,7 @@
   width: 200px;
   z-index: 9999;
   overflow: scroll;
-  padding: 1rem 1.5rem;
+  padding: 1.5rem;
   background-color: var(--page-background);
   color: var(--text-color);
   border-radius: 24px;
