--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -121,6 +121,11 @@
  }
 }
 
+.carousel__error {
+  margin: 1rem 0 1.5rem 1rem;
+  color: var(--text-light);
+}
+
 .slide-down-paragraph {
   animation: slide-down 0.8s;
 }
