--- a/frontend/src/styles/TopNavBar.scss
+++ b/frontend/src/styles/TopNavBar.scss
@@ -20,16 +20,9 @@ nav {
 
 nav .nav__logo {
   height: 35px;
-  margin-left: 1rem;
+  margin-left: 1.25rem;
   margin-right: 1.5rem;
   margin-top: 0.2rem;
-  // transition: $transition-3;
-
-  // &:hover {
-  //   cursor: pointer;
-  //   transition: $transition-3;
-  //   transform: scale(1.05);
-  // }
 }
 
 nav .nav__explore-link{
@@ -118,15 +111,20 @@ nav button {
   }
 }
 
-.nav__user-profile img{
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  object-fit: cover;
+.nav__user-profile {
+  display: flex;
+  align-items: center;
 
-  &:hover{
-    cursor: pointer;
-    box-shadow: var(--shadow) 0px 2px 8px 1px;
+  img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+
+    &:hover{
+      cursor: pointer;
+      box-shadow: var(--shadow) 0px 2px 8px 1px;
+    }
   }
 }
 
