feat: add delete input on all spots search

--- a/frontend/src/styles/AllSpotsSearch.scss
+++ b/frontend/src/styles/AllSpotsSearch.scss
@@ -32,6 +32,13 @@
     top: 8px;
   }
 
+  .allSpotsSearch__delete {
+    color: var(--text-light);
+    position: absolute;
+    right: 12px;
+    top: 8px;
+  }
+
   .allSpots-btn-grey {
     height: 2rem;
     padding: 0 1rem;
